--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -625,8 +625,8 @@
       " -2375.14007167     0.            -0.         -2816.44983573\n",
       "  8134.59612707     0.          4660.10589116  4447.07901303\n",
       "   192.86762676   388.22612943   936.132407       0.        ]\n",
-      "The predictors left in the model are \n",
-      " ['Hits', 'Runs', 'RBI', 'CAtBat', 'CHits', 'CRuns', 'CRBI', 'CWalks', 'PutOuts', 'Assists']\n"
+      "The top three predictors left in the model with highest weights are \n",
+      " ['CRBI', 'CRuns', 'CHits']\n"
      ]
     }
    ],
@@ -634,7 +634,7 @@
     "# Since regularization (L1) can lead to zero coefficients, i.e. some of the features are completely neglected for the evaluation of output. \n",
     "# So Lasso regression not only helps in reducing over-fitting but it can help us in feature selection.\n",
     "print('The coefficients of CV are \\n', lassocv_coef)\n",
-    "print('The predictors left in the model are \\n', list(X.columns[abs(lassocv_coef) > 0]))"
+    "print('The top three predictors left in the model with highest weights are \\n', list(X.columns[np.argsort(np.absolute(lassocv_coef))[-3:]]))"
    ]
   },
   {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
